@@ -1,10 +1,11 @@
 2009-04-10 nordfalk - Version 0.9.0 - Lucy Lexicographer
-
+ * Binary ready-to-run-with-a-JRE
+ * Rename: dict-reader→list, format→fix
  * Different aligment of pardef and other entries.
  * 2 spaces before <e> even in aligned 1-line mode
  * option -alignMonodix aligns monodix (pardef 10, 30, entries 25, 45)
  * Character data just inside a <pardef> tag is now retained in the right place
- * Added support for 'equiv-paradigms'
+ * Added support for and fixed 'equiv-paradigms' task
 
 2009-03-18 nordfalk
 
